listo, todo lo que dije en el chat :D

--- a/templates/anfitrion.html
+++ b/templates/anfitrion.html
@@ -41,6 +41,8 @@
         <input class="form-control" type="time" name="horario_fin" id="horario_fin" value="19:00">
         Precio:
         <input class="form-control" type="number" name="precio" id="precio" value="15">
+        Número telefónico:
+        <input class="form-control" type="tel" name="phone" id="phone" pattern="[0-9]{9}" value="994595554">
 
 
         <input class="btn boton" type="submit" value="Publicar">
