--- a/templates/login.html
+++ b/templates/login.html
@@ -38,7 +38,7 @@
 <body>
     <h1 style="color: var(--morado-oscuro);">Espaciapp</h1>
     <br>
-    <form>
+    <form id="myForm">
         <label for="email">Correo</label>
         <input class="form-control" type="email" id="email" placeholder="Ingresa tu correo" name="email" required><br><br>
         
@@ -46,10 +46,10 @@
         <input type="password" class="form-control" id="password" name="password" placeholder="Ingresa tu clave" required><br><br>
         
         <div >
-            <!-- <a href="tutor.html" class="btn boton">Tutor</a>
-            <a href="anfitrion.html" class="boton btn ">Anfitrión</a> -->
-            <a href="/tutor" class="btn boton">Tutor</a>
-            <a href="/anfitrion" class="boton btn ">Anfitrión</a>
+            <button type="button" class="btn boton" onclick="tutor()">Tutor</button>
+            <button type="button" class="boton btn" onclick="anfitrion()">Anfitrión</button>
+            <!-- <a href="/tutor" class="btn boton">Tutor</a> -->
+            <!-- <a href="/anfitrion" class="boton btn ">Anfitrión</a> -->
         </div>
         <br>
         
@@ -57,6 +57,18 @@
     </form>
     
 
+    <script>
+        function tutor(){
+            var email = document.getElementById("email").value
+            document.cookie = "usuario="+email+"; expires=Fri, 31 Dec 2023 23:59:59 GMT; path=/";
+            window.location.href = "/tutor"
+        }
+        function anfitrion(){
+            var email = document.getElementById("email").value
+            document.cookie = "usuario="+email+"; expires=Fri, 31 Dec 2023 23:59:59 GMT; path=/";
+            window.location.href = "/anfitrion"
+        }
+    </script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
