--- a/templates/tutor.html
+++ b/templates/tutor.html
@@ -41,8 +41,18 @@
         }
         var telefono = 0;
         function publicaciones(){
-            return fetch("http://localhost:5000/publicaciones").then(r => r.json())
+            return fetch("/publicaciones").then(r => r.json())
         }
+
+        function crear_descripcion(pub){
+            return `
+                <p>Aforo: ${pub["aforo"]}</p>
+                <p>Inicio: ${pub["horario_inicio"]}</p>
+                <p>Fin: ${pub["horario_fin"]}</p>
+                <img height="200px" src="data:image/png;base64,${pub['image']}" alt="Image">
+            `
+        }
+
         // Function to initialize the map
         function initMap(latitude, longitude) {
             var map = L.map('map').setView([latitude, longitude], 25);
@@ -59,38 +69,21 @@
                 console.log(pubs)
 
                 pubs.forEach(function(pub) {
-                    var marker = L.marker([pub.lat, pub.lng])
+                    var marker = L.marker([pub.latitude, pub.longitude])
                         .bindPopup("S/ "+pub.precio.toString()) // Set autoOpenPopup to true
                         .addTo(map);
                     
                     marker.on('click', function() {
                     // Perform an action based on the marker index
                         console.log('Marker index: ' + pub.desc);
-                        document.getElementById("descripcion").innerHTML = pub.desc;
+                        // document.getElementById("descripcion").innerHTML = pub.desc + '<img height="200px" src="data:image/png;base64,'+pub.image+'" alt="Image">';
+                        document.getElementById("descripcion").innerHTML = crear_descripcion(pub)
                         document.getElementById("btn_reservar").disabled = false;
                         telefono = pub.phone
                         console.log(telefono)
                         // Add your custom code here to perform the desired action based on the marker index
                     });
                 })
-
-
-                // var lat = /* Add latitude value */;
-                // var lng = /* Add longitude value */;
-                // addMarker(lat, lng);
-                /* var markers = [
-                    {lat: latitude+0.0008, lng: longitude-0.0008, title: "$15"},
-                    {lat: latitude-0.0008, lng: longitude+0.0008, title: "$20"},
-                    {lat: latitude, lng: longitude+2*0.0008, title: "$25"},
-                    // Add more markers as needed
-                ];
-                
-                // Loop through the markers array and add markers to the map
-                markers.forEach(function(marker) {
-                    L.marker([marker.lat, marker.lng])
-                        .bindPopup(marker.title, { autoOpen: true }) // Set autoOpenPopup to true
-                        .addTo(map);
-                }); */
             });
 
             
