--- a/templates/anfitrion.html
+++ b/templates/anfitrion.html
@@ -33,6 +33,8 @@
         Coordenadas: 
         <input class="form-control" type="number" name="latitude" id="latitude" step="any" required>
         <input class="form-control" type="number" name="longitude" id="longitude" step="any" required>
+        Direccion:
+        <input class="form-control" type="text" name="direccion" id="direccion" required>
         Aforo:
         <input class="form-control" type="number" name="aforo" id="aforo" value="5">
         Horario inicio:
