--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
             font-family:Verdana, Geneva, Tahoma, sans-serif;
         }
         
-        form, div {
+        form {
             display: flex;
             flex-direction: column;
             align-items: center;
