--- a/templates/espacios.html
+++ b/templates/espacios.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Espaciapp Tutor</title>
+    
+    <title>Espaciapp Anfitrion</title>
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
@@ -28,11 +29,38 @@
         padding: 10px;
         margin-bottom: 10px;
         }
-
+        .nav-elem{
+            font-size: larger; 
+            background-color: #210571;
+            color: white;
+            border-radius: 8%;
+        }
     </style>
 </head>
 <body>
-    <h1 style="color: var(--morado-oscuro);"><strong>Mis Espacios</strong></h1>
+    <!-- <h1 style="color: var(--morado-oscuro);"><strong>Mis Espacios</strong></h1> -->
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(203, 167, 237);">
+        <span class="navbar-brand mb-0 h1" style="font-size: xx-large; color: #210571;"><strong>Espaciapp - Anfitrion</strong></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div  class="collapse navbar-collapse"  id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto" style="gap: 10px;">
+            <li class="nav-item active">
+              <a class="nav-link nav-elem" style="font-size: larger; color: white;" href="/anfitrion"> <strong>Mis Espacios</strong> </a>
+            </li>
+            
+            <li class="nav-item">
+              <a class="nav-link nav-elem" style=" font-size: larger; color: white;" href="/nuevapub">Publicar</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link nav-elem" style=" font-size: larger; color: white;" href="/login">Cerrar Sesión</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <br>
     {% for pub in data %}
     <div class="d-flex flex-row card">
         <div class="p-2">
@@ -52,7 +80,7 @@
         
     </div>
   {% endfor %}
-  <a  class="btn boton" href="/nuevapub">Publicar Nuevo Espacio</a>
+  <!-- <a  class="btn boton" href="/nuevapub">Publicar Nuevo Espacio</a> -->
 
     <script>
         function ver_id(id){
