--- a/templates/anfitrion.html
+++ b/templates/anfitrion.html
@@ -64,9 +64,9 @@
 
         <div>
             <form method="post" action="/publicar" enctype="multipart/form-data">
-            Coordenadas: 
-            <input class="form-control" type="number" name="latitude" id="latitude" step="any" required>
-            <input class="form-control" type="number" name="longitude" id="longitude" step="any" required>
+            <!-- Coordenadas:  -->
+            <input class="form-control" type="number" name="latitude" id="latitude" step="any" required hidden>
+            <input class="form-control" type="number" name="longitude" id="longitude" step="any" required hidden>
             Direccion:
             <input class="form-control" type="text" name="direccion" id="direccion" required>
             Aforo:
