--- a/templates/login.html
+++ b/templates/login.html
@@ -14,6 +14,8 @@
             margin: 0;
             padding: 0;
             font-family:Verdana, Geneva, Tahoma, sans-serif;
+            background-color: rgb(52, 52, 52);
+            color: white;
         }
         
         form {
@@ -26,7 +28,6 @@
             text-align: center;
         }
         .boton{
-            color: white;
             background-color: var(--morado-oscuro);
             margin: 5px;
         }
@@ -36,7 +37,7 @@
     </style>
 </head>
 <body>
-    <h1 style="color: var(--morado-oscuro);">Espaciapp</h1>
+    <h1 style="color: var(--morado-oscuro);"><strong>EspaciApp</strong></h1>
     <br>
     <form id="myForm">
         <label for="email">Correo</label>
