--- a/templates/login.html
+++ b/templates/login.html
@@ -14,8 +14,7 @@
             margin: 0;
             padding: 0;
             font-family:Verdana, Geneva, Tahoma, sans-serif;
-            background-color: rgb(52, 52, 52);
-            color: white;
+            color: black;
         }
         
         form {
@@ -30,6 +29,7 @@
         .boton{
             background-color: var(--morado-oscuro);
             margin: 5px;
+            color:white;
         }
         :root{
             --morado-oscuro: #210571;
